:wrench: Fix Travel video cards on Safari

--- a/src/travel/videolibrary.module.scss
+++ b/src/travel/videolibrary.module.scss
@@ -51,6 +51,7 @@
 	transition: linear 200ms;
 	cursor: pointer;
 	border-radius: 10px;
+	width: 200px;
 
 	&:hover,
 	&:focus {
